# BSCS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  et --hard 0644143
data/: tam.smi
src/: build_index.cpp  search_index.cpp
